add and subtract implemented

--- a/calculator.html
+++ b/calculator.html
@@ -39,7 +39,7 @@
                 <tr>
                     <td><button class="btn" onclick="insertDigit(0)"> 0 </button></td>
                     <td><button class="btn" onclick="insertDigit('.')"> . </button></td>
-                    <td><button class="btn" onclick="insertDigit('=')"> = </button></td>
+                    <td><button class="btn" onclick="doTheMath()"> = </button></td>
                     <td><button class="btn" onclick="insertDigit('/')"> / </button></td>
                 </tr>
             </table>
