--- a/calculator.html
+++ b/calculator.html
@@ -23,6 +23,7 @@
                     <td><button class="btn" onclick="insertDigit(8)"> 8 </button></td>
                     <td><button class="btn" onclick="insertDigit(9)"> 9 </button></td>
                     <td><button class="btn" onclick="insertDigit('+')"> + </button></td>
+                    <td><button class="btn" onclick="insertDigit('%')"> % </button></td>
                 </tr>
                 <tr>
                     <td><button class="btn" onclick="insertDigit(4)"> 4 </button></td>
